updated usability study for resubmission

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -1,15 +1,13 @@
-\documentclass[11pt, oneside]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
-\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-\geometry{letterpaper}                   		% ... or a4paper or a5paper or ... 
-%\geometry{landscape}                		% Activate for for rotated page geometry
-%\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
-\usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
-								% TeX will automatically convert eps --> pdf in pdflatex		
+\documentclass[11pt, oneside]{article}   
+\usepackage{geometry}                	
+\geometry{letterpaper}                   	
+\usepackage{graphicx}			
+							
 \usepackage{amssymb}
 
 \title{Usability Metrics for Online Shopping}
 \author{Andrew Kowalczyk \& Edward Bramanti}
-\date{\today}							% Activate to display a given date or no date
+\date{\today}						
 
 \begin{document}
 \maketitle
@@ -20,7 +18,7 @@ For our three metrics, we chose learnability, efficiency, and satisfaction. Lear
 
 \begin{enumerate}
     \item Buying a product: a USB stick (test subject was told to find a USB stick they would personally buy)
-    \item Profile change: adding and a credit card number
+    \item Profile change: adding and deleting a credit card number
     \item Narrowing a product down simply by using the navigation provided: Nokia Lumia 920
 \end{enumerate}
 
@@ -46,6 +44,7 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
 
 \subsubsection{User \#1}
 
+\begin{center}     
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -53,9 +52,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 3 & 0:24s & 7 \\ \hline
     Shopzilla & 2 & 0:39s & 6 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#2}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -63,9 +64,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 5 & 0:17s & 6 \\ \hline
     Shopzilla & 4 & 0:20s & 7 \\ \hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#3}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -73,9 +76,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 5 & 0:25s & 10 \\ \hline
     Shopzilla & 5 & 0:34s & 8 \\ \hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#4}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -83,9 +88,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 3 & 0:33s & 8 \\ \hline
     Shopzilla & 5 & 0:53s & 6 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#5}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -93,9 +100,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 5 & 0:22s & 10 \\ \hline
     Shopzilla & 5 & 1:01s & 4 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{Average of all 5 test subjects}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -103,10 +112,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     eBay & 4.2 & 0:24.2s & 8.2 \\ \hline
     Shopzilla & 4.2 & 0:41.4s & 6.2 \\\hline
 \end{tabular}
+\end{center}
 
 \subsection{Analysis}
 
-The learnability is equal amongst all three shopping websites because finding a USB stick isn't too hard. Shopzilla had pop-ups showing direct checkout for certain products which made learnability higher for that shopping website. eBay made it very easy to arrive to checkout. The overall interface of the website did not clearly determine a "winner" in terms of learnability. The efficiency is also fairly equal amongst all websites (due to the fact that the times for Shopzilla and eBay are up to checkout). Satisfaction was also fairly in the same level. Satisfaction is partially related to website appeal, so this metric is somewhat subjective. There was mention that the pop-up of the two day shipping hindered results for Amazon, but this simply seems like a personal preference.
+The learnability is equal amongst all three shopping websites because finding a USB stick isn't too hard. Shopzilla had pop-ups showing direct checkout for certain products which made learnability higher for that shopping website. eBay made it very easy to arrive to checkout. The overall interface of the website did not clearly determine a ``winner'' in terms of learnability. The efficiency is also fairly equal amongst all websites (due to the fact that the times for Shopzilla and eBay are up to checkout). Satisfaction was also fairly in the same level. Satisfaction is partially related to website appeal, so this metric is somewhat subjective. There was mention that the pop-up of the two day shipping hindered results for Amazon, but this simply seems like a personal preference.
 
 \subsection{Profile change: Add credit card number}
     
@@ -114,6 +124,7 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
 
 \subsubsection{User \#1}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -121,9 +132,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 1 & 1:00s & 5 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#2}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -131,9 +144,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 3 & 0:49s & 7.5 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#3}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -141,9 +156,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 1 & 1:50s & 2 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#4}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -151,9 +168,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 3 & 0:50s & 7 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#5}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -161,9 +180,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 5 & 0:37s & 10 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{Average of all 5 test subjects}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -171,15 +192,17 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 2.6 & 1:01.2s & 6.3 \\ \hline
     Shopzilla & - & - & - \\\hline
 \end{tabular}
+\end{center}
 
 \subsection{Analysis}
 
-This test was fairly interesting. Since Shopzilla was out of the running, it came down to Amazon and eBay. The learnability for Amazon was interesting because there are so many options for the user too look though. The link "Manage Payment Options" is not the most revealing of titles. In one of the test cases, the user had to use the search bar to find out how to remove a credit card for Amazon (not a test, yet interesting). For eBay, a user had to search google to figure out how to pay as a guest using PayPal.  Efficiency for Amazon was "slower" due to having more options for the user to look through.
+This test was fairly interesting. Since Shopzilla was out of the running, it came down to Amazon and eBay. The learnability for Amazon was interesting because there are so many options for the user too look though. The link ``Manage Payment Options'' is not the most revealing of titles. In one of the test cases, the user had to use the search bar to find out how to remove a credit card for Amazon (not a test, yet interesting). For eBay, a user had to search google to figure out how to pay as a guest using PayPal.  Efficiency for Amazon was ``slower'' due to having more options for the user to look through.
 
 \subsection{List filtering for Nokia Lumia 920}
 
 \subsubsection{User \#1}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -187,9 +210,11 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 3 & 0:45s & 6 \\ \hline
     Shopzilla & 3 & 0:25s & 5 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#2}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -197,9 +222,11 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 3 & 0:53s & 8 \\ \hline
     Shopzilla & 3 & 0:28s & 8 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#3}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -207,9 +234,11 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 1 & 2:25s & 3 \\ \hline
     Shopzilla & 5 & 0:41s & 9 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#4}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -217,9 +246,11 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 5 & 0:41s & 8 \\ \hline
     Shopzilla & 1 & 0:28s & 4 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{User \#5}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -227,9 +258,11 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 5 & 1:01s & 4 \\ \hline
     Shopzilla & 1 & 0:38s & 3 \\\hline
 \end{tabular}
+\end{center}
 
 \subsubsection{Average of all 5 test subjects}
 
+\begin{center}
 \begin{tabular}{| l | l | l | l |}
     \hline
      & Learnability & Efficiency & Satisfaction \\ \hline
@@ -237,12 +270,44 @@ This test was fairly interesting. Since Shopzilla was out of the running, it cam
     eBay & 3.4 & 1:09s & 5.8 \\ \hline
     Shopzilla & 2.6 & 0:32s & 5.8 \\\hline
 \end{tabular}
+\end{center}
 
 \subsection{Analysis}
 The learnability for the list filtering did not come to a real clear winner. Every site had some issues using their list navigation for finding the particular phone that we were looking for. In terms of efficiency, Shopzilla blows the other two out of the water. Satisfaction was led by Amazon just slightly.
 
 \section{Overall Analysis}
 
-According to the results, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
+\begin{center}
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 3.53 & 58.918s & 7.86 \\ \hline
+    eBay & 3.4 & 51.46s & 6.76 \\ \hline
+    Shopzilla & 3.4 & 36.7s & 6 \\ \hline
+\end{tabular}
+\end{center}
+\vspace{2mm}
 
-\end{document}  
+According to the reslults, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
+
+Now looking at the table with all of the measurements averaged, we have a compelling reason for why one shopping site comes out on top. Overall the trend seems to be that as a certain shopping site are easier to use, the less happy the user tends to be. This is because the sites that take longer to learn have better functionality. Users are rewarded by learning the methods of the website. Amazon's experience is the best overall; it focuses more on satisfaction through a personalized experience.
+
+Subjective satisfaction is a priority for each and every one of these sites. Since each of them are a service for customers, their main goal is for their customers to have a good experience. Of course, an efficient website can make  tasks easier and a learnable site will allow the customer to access products faster. Nevertheless, if a customer lacks satisfaction during a shopping experience, they become less likely to buy any items, regardless of how efficient or learnable the interface is. 
+
+According to the metrics, Amazon yields the highest satisfaction of the three websites for different tasks, even though it is lacking in efficiency and learnability. Since users are satisfied using the website, they are more likely to learn the interface and overlook the more slightly complex interface. If satisfaction is of key importance when considering how to design a shopping website, then Amazon represents a \textbf{strong} model to base a design off of.
+
+\section{Usability study improvements}
+
+Looking back at the way we recorded learnability and efficiency, we realized that we recorded the metrics wrong. Learnability is a \textit{temporal} metric and should not be scored on a number scale. Efficiency is the time it takes for a user to do something that they already know. Even though we recorded efficiency as time, we recorded it as the first time that the user attempted a given task. This should have been the second, third, etc. time that the user completed that given task.
+
+If we were allowed to re-do our study we would have recorded learnability based how long the specific task took for their first time. We would then record efficiency a second time, third time, etc. We could average those times for a given user if needed. The learnability and the efficiency would then be recorded correctly. The user would be timed for how long it took them to figure out the website, which is the correct way of recording learnability. The user would also be recorded for how long it takes for them to do what they already know how to do.
+
+In more concrete terms, the way that way we would change our study is as follows:
+
+\begin{enumerate}
+\item Record learnability as the first time the user completes the task
+\item Record efficiency as the second and third time the user completes the task (store the average as well)
+\end{enumerate} 
+
+
+\end{document}
