Update standards development report to include re-reviewed HW 0926 feedback.

--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -95,6 +95,8 @@ Also, in general, the evaluations of eBay and Shopzilla will be slightly shorter
 		Shopzilla's efficiency is also quite high due to their site's simplicity. Once a user familiarizes themselves with Shopzilla's website, the act of being inefficient and the probability of inefficiency is quite low. When it came to list filtering, Shopzilla tore the competition down. Amazon and eBay did not really compare when it came to how efficient Shopzilla was in this task. Overall, Shopzilla is efficient in every way.
 
 	\subsection{Errors}
+% JD: You didn't really need to provide a heuristic analysis for errors because your
+%     usability test did not measure it, but OK, we'll take it :)
 
 		\subsubsection{Amazon's errors}
 		A potential error that may arise during shopping using the 1-Click\textregistered\hspace{2 mm}method, is that each location saved in a user's account can have a default payment method. If a user forgets which payment method they have chosen for a given location to ship to, this can charge a different payment method than they might have expected. 
@@ -108,6 +110,7 @@ Also, in general, the evaluations of eBay and Shopzilla will be slightly shorter
 		Shopzilla's site offers no room for real errors. The rate of errors is quite low. For example, in the test of narrowing down a product simply by using list filtering, Shopzilla dominated the test. They have their site running nearly error-free.
 
 	\subsection{Memorability}
+% JD: Same with memorability.
 
 		\subsubsection{Amazon's memorability}		
 		In terms of memorability, Amazon's site utilizes the idea of keeping the link or button that completes an action on the right side of the page. This make it memorable because any user can expect to see similar actions on that side fo the page. Overall, Amazon's site is memorable.
